syntax = "proto3";

option java_package = "com.vegcale.architecture.datastore";
option java_multiple_files = true;

message UserPreferences {
    bool is_notification_on = 1;
    repeated string places = 2;
    int32 min_intensity_level_index = 3;
    string latest_earthquake_datetime = 4;
    double latest_earthquake_latitude = 5;
    double latest_earthquake_longitude = 6;
    double latest_earthquake_magnitude = 7;
}